test_suite/alan-2022-examples/failing/008260_mutation.alan
source Wu0 function O() do to boolean begin relax end begin relax end
